--- a/files/fxml/table.fxml
+++ b/files/fxml/table.fxml
@@ -2,7 +2,9 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
@@ -13,7 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane depthTest="DISABLE" hgap="10.0" maxHeight="1080" maxWidth="1920" minHeight="0" minWidth="0" prefHeight="977.0" prefWidth="1904.0" stylesheets="@../css/match.css" vgap="10.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerTable" fx:id = "root">
+<GridPane depthTest="DISABLE" hgap="10.0" maxHeight="1080" maxWidth="1920" minHeight="0" minWidth="0" prefHeight="977.0" prefWidth="1904.0" stylesheets="@../css/match.css" vgap="10.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerTable">
     <columnConstraints>
         <ColumnConstraints hgrow="NEVER" percentWidth="5.0" />
         <ColumnConstraints hgrow="NEVER" maxWidth="675.92" minWidth="10.0" prefWidth="403.6666564941406" />
@@ -131,59 +133,6 @@
                <Font size="15.0" />
             </font>
           </Button>
-   </Pane>
-   <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="4">
-      <children>
-         <GridPane layoutX="5.0" layoutY="-30.0" prefHeight="199.0" prefWidth="90.0">
-           <columnConstraints>
-             <ColumnConstraints hgrow="SOMETIMES" maxWidth="78.0" minWidth="10.0" prefWidth="70.0" />
-               <ColumnConstraints hgrow="SOMETIMES" maxWidth="39.0" minWidth="10.0" prefWidth="20.0" />
-           </columnConstraints>
-           <rowConstraints>
-             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-           </rowConstraints>
-            <children>
-               <Label prefHeight="31.0" prefWidth="58.0" text="Blue:" GridPane.rowIndex="1">
-                  <font>
-                     <Font size="18.0" />
-                  </font>
-               </Label>
-               <Label prefHeight="27.0" prefWidth="87.0" text="Ammo" GridPane.columnSpan="2">
-                  <font>
-                     <Font size="24.0" />
-                  </font>
-               </Label>
-               <Label prefHeight="27.0" prefWidth="87.0" text="Red:" GridPane.rowIndex="2">
-                  <font>
-                     <Font size="18.0" />
-                  </font>
-               </Label>
-               <Label prefHeight="27.0" prefWidth="87.0" text="Yellow:" GridPane.rowIndex="3">
-                  <font>
-                     <Font size="18.0" />
-                  </font>
-               </Label>
-               <Label fx:id="blueAmmo" text="3" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                  <font>
-                     <Font size="18.0" />
-                  </font>
-               </Label>
-               <Label fx:id="redAmmo" text="3" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                  <font>
-                     <Font size="18.0" />
-                  </font>
-               </Label>
-               <Label fx:id="yellowAmmo" text="3" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                  <font>
-                     <Font size="18.0" />
-                  </font>
-               </Label>
-            </children>
-         </GridPane>
-      </children>
    </Pane>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
