--- a/files/fxml/match_setup.fxml
+++ b/files/fxml/match_setup.fxml
@@ -4,15 +4,16 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowSpan="3" xmlns="http://javafx.com/javafx/8.0.21" xmlns:fx="http://javafx.com/fxml/1" >
+<Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowSpan="3" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <GridPane fx:id = "choiceGrid" layoutX="15.0" layoutY="81.0" prefHeight="533.0" prefWidth="591.0">
+        <GridPane fx:id="choiceGrid" layoutX="15.0" layoutY="81.0" prefHeight="533.0" prefWidth="591.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="100.0" />
             </columnConstraints>
@@ -22,9 +23,9 @@
                 <RowConstraints maxHeight="260.0" minHeight="10.0" prefHeight="260.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Pane fx:id = "frenzyPane" prefHeight="200.0" prefWidth="200.0">
+                <Pane fx:id="frenzyPane" prefHeight="200.0" prefWidth="200.0">
                     <children>
-                        <Label alignment="CENTER" prefHeight="63.0" prefWidth="591.0" text="Please select your preferred skull number and map type" textFill="WHITE">
+                        <Label fx:id = "title" alignment="CENTER" prefHeight="63.0" prefWidth="591.0" textFill="WHITE">
                             <font>
                                 <Font size="20.0" />
                             </font>
@@ -76,14 +77,52 @@
                         </GridPane>
                     </children>
                 </Pane>
-                <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
+                <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+               <children>
+                  <GridPane fx:id="mapGrid" prefHeight="260.0" prefWidth="591.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="33.3" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="33.3" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="33.3" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" percentHeight="50.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" percentHeight="50.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Pane  prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <ImageView fx:id = "map00" fitHeight="130.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                           </children></Pane>
+                        <Pane  prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                           <children>
+                              <ImageView fx:id="map01" fitHeight="130.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                           </children></Pane>
+                        <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2">
+                           <children>
+                              <ImageView  fx:id="map02" fitHeight="130.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                           </children></Pane>
+                        <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                           <children>
+                              <ImageView fx:id="map10" fitHeight="130.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                           </children></Pane>
+                        <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <children>
+                              <ImageView fx:id="map11" fitHeight="130.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                           </children></Pane>
+                        <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                           <children>
+                              <ImageView fx:id="map12" fitHeight="130.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                           </children></Pane>
+                     </children>
+                  </GridPane>
+               </children></Pane>
             </children>
         </GridPane>
-        <Label fx:id = "choiceTimer" layoutX="227.0" layoutY="14.0" text="Time left:">
+        <Label fx:id="timer" layoutX="227.0" layoutY="14.0" text="Time left:">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
     </children>
 </Pane>
-
