--- a/files/fxml/table.fxml
+++ b/files/fxml/table.fxml
@@ -2,9 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -13,8 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane stylesheets="@../css/match.css" xmlns="http://javafx.com/javafx/8.0.21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerTable">
+<AnchorPane stylesheets="@../css/match.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.view.GuiControllerTable">
    <children>
       <GridPane fx:id="root" depthTest="DISABLE" hgap="10.0" maxHeight="1080" maxWidth="1920" minHeight="0" minWidth="0" prefHeight="977.0" prefWidth="1904.0" vgap="10.0">
           <columnConstraints>
@@ -33,11 +30,7 @@
               <RowConstraints maxHeight="182.0" minHeight="0.0" percentHeight="2.0" prefHeight="0.0" vgrow="NEVER" />
             <RowConstraints maxHeight="193.0" minHeight="16.0" percentHeight="20.0" prefHeight="123.0" vgrow="NEVER" />
           </rowConstraints>
-       <ImageView fx:id="currentPlayer" fitHeight="219.0" fitWidth="890.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3" GridPane.rowSpan="2">
-            <image>
-               <Image url="@../assets/player/player_yellow.png" />
-            </image>
-         </ImageView>
+       <ImageView fx:id="currentPlayer" fitHeight="219.0" fitWidth="890.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3" GridPane.rowSpan="2" />
          <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <ImageView fx:id="run" fitHeight="25.0" fitWidth="40.0" layoutX="8.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
                <ImageView fx:id="moveAndGrab" fitHeight="25.0" fitWidth="40.0" layoutX="8.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true" />
@@ -112,11 +105,7 @@
                </GridPane>
          </Pane>
          <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <TableView layoutX="31.0" layoutY="148.0" prefHeight="314.0" prefWidth="342.0">
-                 <columns>
-                   <TableColumn prefWidth="75.0" text="Username" />
-                   <TableColumn prefWidth="75.0" text="Score" />
-                 </columns>
+               <TableView fx:id="leaderboard" layoutX="31.0" layoutY="148.0" prefHeight="314.0" prefWidth="342.0">
                   <columnResizePolicy>
                      <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                   </columnResizePolicy>
