--- a/files/fxml/right1_tiles.fxml
+++ b/files/fxml/right1_tiles.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="rightGrid" layoutX="22.0" layoutY="156.0" prefHeight="426.0" prefWidth="286.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="rightGrid" layoutX="22.0" layoutY="156.0" prefHeight="426.0" prefWidth="286.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -40,7 +40,7 @@
       <ImageView fx:id="center31" fitHeight="63.75" fitWidth="62.5" layoutX="40.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true" />
         </Pane>
         <Pane fx:id="pane20" prefHeight="94.0" prefWidth="31.0" GridPane.rowIndex="2">
-      <ImageView fx:id="tile20" fitHeight="286.0" fitWidth="146.0" layoutY="1" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="tile20" fitHeight="143.0" fitWidth="146.0" layoutY="1" pickOnBounds="true" preserveRatio="true" />
                 <ImageView fx:id="loot20" fitHeight="35.0" fitWidth="35.0" layoutX="35.0" layoutY="79.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="center20" fitHeight="63.75" fitWidth="62.0" layoutX="59.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
         </Pane>
