--- a/files/fxml/right1_tiles.fxml
+++ b/files/fxml/right1_tiles.fxml
@@ -42,9 +42,7 @@
         </Pane>
         <Pane fx:id="pane20" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
       <ImageView fx:id="tile20" fitHeight="144.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/board/board_right1/tile22.png" />
-         </image></ImageView>
+         </ImageView>
                 <ImageView fx:id="loot20" fitHeight="35.0" fitWidth="35.0" layoutX="35.0" layoutY="79.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="center20" fitHeight="63.75" fitWidth="62.0" layoutX="59.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
         </Pane>
